--- a/src/FolderDetail/FolderDetail.css
+++ b/src/FolderDetail/FolderDetail.css
@@ -1,3 +1,9 @@
+.Sidebar__folderdetail {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
 .btn__back {
     margin: 0px 20px 20px 20px;
     padding: 15px 30px;
@@ -6,7 +12,7 @@
     cursor: pointer;
 }
 
-.NotePage__folder {
+.folderdetail {
     padding: 0px;
     margin: 0px 20px 0px 0px;
     text-align: right;
