--- a/src/FolderSidebar/FolderSidebar.css
+++ b/src/FolderSidebar/FolderSidebar.css
@@ -1,6 +1,7 @@
 .Sidebar__folderlist {
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
     padding: 20px;
 }
 
@@ -10,10 +11,18 @@
     margin: 0px;
 }
 
+.link__addfolder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+}
+
 .btn__addfolder {
     margin: 20px;
     padding: 15px 30px;
     background-color: transparent;
     border: 1px solid black;
     cursor: pointer;
+    width: 80%;
 }
