--- a/src/NoteSidebar/NoteSidebar.css
+++ b/src/NoteSidebar/NoteSidebar.css
@@ -1,7 +1,7 @@
 .Sidebar__folderdetail {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .btn__back {
