--- a/src/App.css
+++ b/src/App.css
@@ -13,21 +13,16 @@ main {
   flex-direction: row;
 }
 
-aside {
+.Sidebar {
   flex: 1;
   padding: 20px;
   margin: 0px;
 }
 
-section {
+.MainContent {
   flex: 4;
   padding: 20px;
   margin: 0px;
-}
-
-.MainPage {
-  height: 100%;
-  min-height: 80vh;
 }
 
 .NoteList {
