--- a/src/Folder/Folder.css
+++ b/src/Folder/Folder.css
@@ -10,12 +10,13 @@
     font-weight: normal;
     padding: 0px;
     margin: 0px;
+    font-size: 18px;
 }
 
 .active li {
     background-color: aquamarine;
 }
 
-a:first-child > li {
+li:first-child {
     border-top: 1px solid black;
 }
